--- a/Parent/contact.html
+++ b/Parent/contact.html
@@ -19,10 +19,18 @@
   </head>
   <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-        <!-- Preloader -->
-      <div class="preloader flex-column justify-content-center align-items-center">
-          <img class="animation__shake" src="../loginstyls/logo3.png" alt="AdminLTELogo" height="60" width="60">
-        </div>
+      <!-- Preloader -->
+      <div
+        class="preloader flex-column justify-content-center align-items-center"
+      >
+        <img
+          class="animation__shake"
+          src="../loginstyls/logo3.png"
+          alt="AdminLTELogo"
+          height="60"
+          width="60"
+        />
+      </div>
       <!-- Navbar -->
       <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <ul class="navbar-nav">
@@ -52,6 +60,7 @@
             <a class="nav-link" href="http://localhost/project_madrasti/">
               <i>Logout</i>
             </a>
+          </li>
         </ul>
       </nav>
       <!-- /.navbar -->
@@ -71,7 +80,11 @@
         <div class="sidebar">
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-              <img src="../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image" />
+              <img
+                src="../dist/img/user2-160x160.jpg"
+                class="img-circle elevation-2"
+                alt="User Image"
+              />
             </div>
             <div class="info">
               <a href="profile.html" class="d-block">Admin Name</a>
@@ -86,45 +99,21 @@
               data-accordion="false"
             >
               <li class="nav-item">
-                <a href="dashboard_page.html" class="nav-link">
+                <a href="dasboard.html" class="nav-link">
                   <i class="nav-icon fas fa-tachometer-alt"></i>
                   <p>Dashboard</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="classes_page.html" class="nav-link">
+                <a href="grades.html" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
-                  <p>Classes</p>
+                  <p>Grades</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="teachers_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="person-add"></ion-icon
-                  ></i>
-                  <p>Teachers</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="subjects_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="library"></ion-icon></ion-icon></i>
-                  <p>Subjects</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="parents_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="people"></ion-icon></ion-icon
-                  ></i>
-                  <p>Parents</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="students_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="id-card"></ion-icon></i>
-                  <p>Students</p>
+                <a href="attendance.html" class="nav-link">
+                  <i class="nav-icon"><ion-icon name="create"></ion-icon></i>
+                  <p>Attendance</p>
                 </a>
               </li>
             </ul>
@@ -142,7 +131,9 @@
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                  <li class="breadcrumb-item"><a href="dashboard_page.html">Home</a></li>
+                  <li class="breadcrumb-item">
+                    <a href="dasboard.html">Home</a>
+                  </li>
                 </ol>
               </div>
             </div>
@@ -159,7 +150,7 @@
                       src="https://img.icons8.com/ios/50/teacher.png"
                       alt="admin Icon"
                     />
-                    <h3>Manager</h3>
+                    <h3>Teachers</h3>
                     <table>
                       <tr>
                         <td><strong>Phone</strong></td>
@@ -184,6 +175,43 @@
                       alt="School Icon"
                     />
                     <h3>School</h3>
+                    <table>
+                      <tr>
+                        <td><strong>Phone</strong></td>
+                        <td><a href="tel:0799999999">0799999999</a></td>
+                      </tr>
+                      <tr>
+                        <td><strong>Email</strong></td>
+                        <td>
+                          <a href="mailto:Email@domain.com">Email@domain.com</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><strong>URL</strong></td>
+                        <td>
+                          <a href="https://www.madrasati.com"
+                            >www.madrasati.com</a
+                          >
+                        </td>
+                      </tr>
+                      <tr>
+                        <td><strong>Location</strong></td>
+                        <td>
+                          <a href="#">School Location click to see direction</a>
+                        </td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 d-flex">
+                <div class="contact-cards w-100">
+                  <div class="card1">
+                    <img
+                      src="https://img.icons8.com/ios/50/school.png"
+                      alt="School Icon"
+                    />
+                    <h3>Admin</h3>
                     <table>
                       <tr>
                         <td><strong>Phone</strong></td>
