--- a/Teacher/contact.html
+++ b/Teacher/contact.html
@@ -19,10 +19,18 @@
   </head>
   <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-        <!-- Preloader -->
-      <div class="preloader flex-column justify-content-center align-items-center">
-          <img class="animation__shake" src="../loginstyls/logo3.png" alt="AdminLTELogo" height="60" width="60">
-        </div>
+      <!-- Preloader -->
+      <div
+        class="preloader flex-column justify-content-center align-items-center"
+      >
+        <img
+          class="animation__shake"
+          src="../loginstyls/logo3.png"
+          alt="AdminLTELogo"
+          height="60"
+          width="60"
+        />
+      </div>
       <!-- Navbar -->
       <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <ul class="navbar-nav">
@@ -52,13 +60,14 @@
             <a class="nav-link" href="http://localhost/project_madrasti/">
               <i>Logout</i>
             </a>
+          </li>
         </ul>
       </nav>
       <!-- /.navbar -->
 
       <!-- Main Sidebar Container -->
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="admin_dash.html" class="brand-link">
+        <a href="dashboard.html" class="brand-link">
           <img
             src="../styles/logo2.png"
             alt="Logo"
@@ -71,7 +80,11 @@
         <div class="sidebar">
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-              <img src="../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image" />
+              <img
+                src="../dist/img/user2-160x160.jpg"
+                class="img-circle elevation-2"
+                alt="User Image"
+              />
             </div>
             <div class="info">
               <a href="profile.html" class="d-block">Admin Name</a>
@@ -86,45 +99,29 @@
               data-accordion="false"
             >
               <li class="nav-item">
-                <a href="dashboard_page.html" class="nav-link">
+                <a href="dashboard.html" class="nav-link">
                   <i class="nav-icon fas fa-tachometer-alt"></i>
                   <p>Dashboard</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="classes_page.html" class="nav-link">
+                <a href="grads.html" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
-                  <p>Classes</p>
+                  <p>Grades</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="teachers_page.html" class="nav-link">
+                <a href="notifications.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="person-add"></ion-icon
+                    ><ion-icon name="notifications"></ion-icon
                   ></i>
-                  <p>Teachers</p>
+                  <p>Notifications</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="subjects_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="library"></ion-icon></ion-icon></i>
-                  <p>Subjects</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="parents_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="people"></ion-icon></ion-icon
-                  ></i>
-                  <p>Parents</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="students_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="id-card"></ion-icon></i>
-                  <p>Students</p>
+                <a href="attendance.html" class="nav-link">
+                  <i class="nav-icon"><ion-icon name="create"></ion-icon></i>
+                  <p>Attendance</p>
                 </a>
               </li>
             </ul>
@@ -142,7 +139,9 @@
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                  <li class="breadcrumb-item"><a href="dashboard_page.html">Home</a></li>
+                  <li class="breadcrumb-item">
+                    <a href="dasboard.html">Home</a>
+                  </li>
                 </ol>
               </div>
             </div>
@@ -159,7 +158,7 @@
                       src="https://img.icons8.com/ios/50/teacher.png"
                       alt="admin Icon"
                     />
-                    <h3>Manager</h3>
+                    <h3>Admin</h3>
                     <table>
                       <tr>
                         <td><strong>Phone</strong></td>
