--- a/Teacher/profile.html
+++ b/Teacher/profile.html
@@ -16,13 +16,23 @@
     <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
     <!-- Custom contact style -->
     <link rel="stylesheet" href="../contact/contact_style.css" />
+    <!--profile Style-->
+    <link rel="stylesheet" href="../styles/profile.css" />
   </head>
   <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-        <!-- Preloader -->
-      <div class="preloader flex-column justify-content-center align-items-center">
-          <img class="animation__shake" src="../loginstyls/logo3.png" alt="AdminLTELogo" height="60" width="60">
-        </div>
+      <!-- Preloader -->
+      <div
+        class="preloader flex-column justify-content-center align-items-center"
+      >
+        <img
+          class="animation__shake"
+          src="../loginstyls/logo3.png"
+          alt="AdminLTELogo"
+          height="60"
+          width="60"
+        />
+      </div>
       <!-- Navbar -->
       <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <ul class="navbar-nav">
@@ -52,13 +62,14 @@
             <a class="nav-link" href="http://localhost/project_madrasti/">
               <i>Logout</i>
             </a>
+          </li>
         </ul>
       </nav>
       <!-- /.navbar -->
 
       <!-- Main Sidebar Container -->
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="admin_dash.html" class="brand-link">
+        <a href="dashboard.html" class="brand-link">
           <img
             src="../styles/logo2.png"
             alt="Logo"
@@ -71,10 +82,14 @@
         <div class="sidebar">
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-              <img src="../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image" />
+              <img
+                src="../dist/img/user2-160x160.jpg"
+                class="img-circle elevation-2"
+                alt="User Image"
+              />
             </div>
             <div class="info">
-              <a href="profile.html" class="d-block">Admin Name</a>
+              <a href="#" class="d-block">Admin Name</a>
             </div>
           </div>
 
@@ -86,45 +101,29 @@
               data-accordion="false"
             >
               <li class="nav-item">
-                <a href="dashboard_page.html" class="nav-link">
+                <a href="dashboard.html" class="nav-link">
                   <i class="nav-icon fas fa-tachometer-alt"></i>
                   <p>Dashboard</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="classes_page.html" class="nav-link">
+                <a href="grads.html" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
-                  <p>Classes</p>
+                  <p>Grades</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="teachers_page.html" class="nav-link">
+                <a href="notifications.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="person-add"></ion-icon
+                    ><ion-icon name="notifications"></ion-icon
                   ></i>
-                  <p>Teachers</p>
+                  <p>Notifications</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="subjects_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="library"></ion-icon></ion-icon></i>
-                  <p>Subjects</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="parents_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="people"></ion-icon></ion-icon
-                  ></i>
-                  <p>Parents</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="students_page.html" class="nav-link">
-                  <i class="nav-icon"
-                    ><ion-icon name="id-card"></ion-icon></i>
-                  <p>Students</p>
+                <a href="attendance.html" class="nav-link">
+                  <i class="nav-icon"><ion-icon name="create"></ion-icon></i>
+                  <p>Attendance</p>
                 </a>
               </li>
             </ul>
@@ -138,84 +137,62 @@
           <div class="container-fluid">
             <div class="row mb-2">
               <div class="col-sm-6">
-                <h1 class="m-0">Contact Page</h1>
-              </div>
-              <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                  <li class="breadcrumb-item"><a href="dashboard_page.html">Home</a></li>
-                </ol>
+                <h2 class="m-0">👤 Profile</h2>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="content">
+        <section class="content">
           <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6 d-flex">
-                <div class="contact-cards w-100">
-                  <div class="card1">
-                    <img
-                      src="https://img.icons8.com/ios/50/teacher.png"
-                      alt="admin Icon"
-                    />
-                    <h3>Manager</h3>
-                    <table>
-                      <tr>
-                        <td><strong>Phone</strong></td>
-                        <td><a href="tel:0799999999">0799999999</a></td>
-                      </tr>
-                      <tr>
-                        <td><strong>Email</strong></td>
-                        <td>
-                          <a href="mailto:Email@domain.com">Email@domain.com</a>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </div>
+            <!-- Buttons -->
+            <div class="upload-section">
+              <label for="bg-upload" class="upload-btn"
+                >Choose cover photo
+              </label>
+              <input type="file" id="bg-upload" accept="image/*" hidden />
+              <button id="remove-bg-btn" class="remove-btn">
+                Delete cover photo
+              </button>
+            </div>
 
-              <div class="col-lg-6 d-flex">
-                <div class="contact-cards w-100">
-                  <div class="card1">
-                    <img
-                      src="https://img.icons8.com/ios/50/school.png"
-                      alt="School Icon"
-                    />
-                    <h3>School</h3>
-                    <table>
-                      <tr>
-                        <td><strong>Phone</strong></td>
-                        <td><a href="tel:0799999999">0799999999</a></td>
-                      </tr>
-                      <tr>
-                        <td><strong>Email</strong></td>
-                        <td>
-                          <a href="mailto:Email@domain.com">Email@domain.com</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td><strong>URL</strong></td>
-                        <td>
-                          <a href="https://www.madrasati.com"
-                            >www.madrasati.com</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td><strong>Location</strong></td>
-                        <td>
-                          <a href="#">School Location click to see direction</a>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
+            <!-- Profile Section -->
+            <div class="profile-header" id="profile-header">
+              <div class="avatar">SN</div>
+              <div class="profile-info">
+                <strong>Student Name</strong><br />
+                <small>student</small>
+              </div>
+            </div>
+
+            <div class="info-grid">
+              <div class="info-card">
+                <h3>🆔 National ID</h3>
+                <p>value</p>
+              </div>
+              <div class="info-card">
+                <h3>🎂 Date of Birth</h3>
+                <p>value</p>
+              </div>
+              <div class="info-card">
+                <h3>⚧ Gender</h3>
+                <p>value</p>
+              </div>
+              <div class="info-card">
+                <h3>🏠 Address</h3>
+                <p>value</p>
+              </div>
+              <div class="info-card">
+                <h3>🏫 Current Grade</h3>
+                <p>value</p>
+              </div>
+              <div class="info-card">
+                <h3>👨‍👩‍👧 Parent Name</h3>
+                <p>value</p>
               </div>
             </div>
           </div>
-        </div>
+        </section>
       </div>
 
       <aside class="control-sidebar control-sidebar-dark">
