--- a/Teacher/attendance.html
+++ b/Teacher/attendance.html
@@ -5,18 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AdminLTE 3 | Classes Page</title>
 
-    <!-- Google Font: Source Sans Pro -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
     />
-    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css" />
-    <!-- AdminLTE -->
     <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
-    <!-- Custom contact style -->
     <link rel="stylesheet" href="../contact/contact_style.css" />
-    <!-- Ionicons -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -29,10 +24,8 @@
 
   <body class="hold-transition sidebar-mini">
     <div class="wrapper">
-      <!-- Preloader -->
-      <div
-        class="preloader flex-column justify-content-center align-items-center"
-      >
+      <!--preload-->
+      <div class="preloader flex-column justify-content-center align-items-center">
         <img
           class="animation__shake"
           src="../loginstyls/logo3.png"
@@ -42,7 +35,6 @@
         />
       </div>
 
-      <!-- Navbar -->
       <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -51,7 +43,7 @@
             ></a>
           </li>
           <li class="nav-item d-none d-sm-inline-block">
-            <a href="contact_page.html" class="nav-link">Contact</a>
+            <a href="contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
 
@@ -76,11 +68,10 @@
           </li>
         </ul>
       </nav>
-      <!-- /.navbar -->
 
-      <!-- Main Sidebar -->
+      <!-- Main Sidebar Container -->
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="dashboard_page.html" class="brand-link">
+        <a href="dashboard.html" class="brand-link">
           <img
             src="../styles/logo2.png"
             alt="Logo"
@@ -104,7 +95,6 @@
             </div>
           </div>
 
-          <!-- Sidebar Menu -->
           <nav class="mt-2">
             <ul
               class="nav nav-pills nav-sidebar flex-column"
@@ -113,41 +103,29 @@
               data-accordion="false"
             >
               <li class="nav-item">
-                <a href="dashboard_page.html" class="nav-link">
+                <a href="dashboard.html" class="nav-link">
                   <i class="nav-icon fas fa-tachometer-alt"></i>
                   <p>Dashboard</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="classes_page.html" class="nav-link">
+                <a href="grads.html" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
-                  <p>Classes</p>
+                  <p>Grades</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="teachers_page.html" class="nav-link">
+                <a href="notifications.html" class="nav-link">
                   <i class="nav-icon"
-                    ><ion-icon name="person-add"></ion-icon
+                    ><ion-icon name="notifications"></ion-icon
                   ></i>
-                  <p>Teachers</p>
+                  <p>Notifications</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="subjects_page.html" class="nav-link">
-                  <i class="nav-icon"><ion-icon name="library"></ion-icon></i>
-                  <p>Subjects</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="parents_page.html" class="nav-link">
-                  <i class="nav-icon"><ion-icon name="people"></ion-icon></i>
-                  <p>Parents</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="students_page.html" class="nav-link">
-                  <i class="nav-icon"><ion-icon name="id-card"></ion-icon></i>
-                  <p>Students</p>
+                <a href="attendance.html" class="nav-link">
+                  <i class="nav-icon"><ion-icon name="create"></ion-icon></i>
+                  <p>Attendance</p>
                 </a>
               </li>
             </ul>
@@ -155,127 +133,83 @@
         </div>
       </aside>
 
-      <!-- Content Wrapper -->
       <div class="content-wrapper">
-        <!-- Content Header -->
         <div class="content-header">
           <div class="container-fluid">
             <div class="row mb-2">
               <div class="col-sm-6">
-                <h1 class="m-0">Subjects Page</h1>
+                <h1 class="m-0">Attendance Page</h1>
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                  <li class="breadcrumb-item">
-                    <a href="dashboard_page.html">Home</a>
-                  </li>
-                  <li class="breadcrumb-item active">
-                    <a href="create_subject.html">Create Subject</a>
-                  </li>
+                  <li class="breadcrumb-item"><a href="dashboard_page.html">Home</a></li>
+                  <li class="breadcrumb-item active">Attendance Page</li>
                 </ol>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Main content -->
         <section class="content">
           <div class="container-fluid">
             <div class="row">
               <div class="col-12">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Subjects</h3>
+                    <h3 class="card-title">Attendance</h3>
                   </div>
+
+                  <!--Select bar-->
                   <div class="card-body">
-                    <div class="col-sm-12 col-md-6 mb-3">
-                      <div id="example1_filter" class="dataTables_filter">
-                        <label>
-                          Search:
-                          <input
-                            type="search"
-                            id="classSearchInput"
-                            class="form-control form-control-sm"
-                            placeholder="Search for classes..."
-                            aria-controls="example1"
-                          />
-                        </label>
+                    <div class="row mb-3">
+                      <div class="col-md-4">
+                        <label for="filterClass">Select the year</label>
+                        <select id="filterClass" class="form-control form-control-sm">
+                          <option value="">none</option>
+                          <option value="tenth grade">Select the Class:</option>
+                          <option value="ggg">GGG</option>
+                          <option value="nin">Nin</option>
+                        </select>
                       </div>
                     </div>
-                    <table
-                      id="example1"
-                      class="table table-bordered table-striped"
-                    >
+
+                    <!--Save button-->
+                    <div class="row mb-2">
+                      <div class="col text-right">
+                        <button class="btn btn-primary" id="saveGradesBtn">
+                          <ion-icon name="bookmark"></ion-icon> Save Changes
+                        </button>
+                      </div>
+                    </div>
+
+                    <table id="example1" class="table table-bordered table-striped">
                       <thead style="background-color: #343a40; color: white">
                         <tr>
                           <th>ID</th>
-                          <th>Subject Name</th>
-                          <th>Changes</th>
+                          <th>Name</th>
+                          <th>Absent?</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <td>1</td>
-                          <td>tenth grade</td>
-                          <td style="text-align: center">
-                            <button
-                              type="button"
-                              class="btn btn-sm btn-primary mr-1"
-                            >
-                              <ion-icon name="create-outline"></ion-icon>
-                            </button>
-                            <button type="button" class="btn btn-sm btn-danger">
-                              <ion-icon name="trash-outline"></ion-icon>
-                            </button>
+                          <td contenteditable="true">A123</td>
+                          <td contenteditable="true">Ahmed</td>
+                          <td class="text-center">
+                            <input type="checkbox" class="absent-checkbox" />
                           </td>
                         </tr>
                         <tr>
-                          <td>2</td>
-                          <td>ggg</td>
-                          <td style="text-align: center">
-                            <ion-icon
-                              name="create-outline"
-                              style="cursor: pointer; margin-right: 10px"
-                            ></ion-icon>
-                            <ion-icon
-                              name="trash-outline"
-                              style="cursor: pointer; font-size: 25"
-                            ></ion-icon>
+                          <td contenteditable="true">B456</td>
+                          <td contenteditable="true">Sara</td>
+                          <td class="text-center">
+                            <input type="checkbox" class="absent-checkbox" />
                           </td>
                         </tr>
                         <tr>
-                          <td></td>
-                          <td>nin</td>
-                          <td style="text-align: center; width: 150px">
-                            <button
-                              type="button"
-                              style="
-                                background-color: #343a40;
-                                border: none;
-                                padding: 6px 10px;
-                                border-radius: 4px;
-                                margin-right: 8px;
-                              "
-                            >
-                              <ion-icon
-                                name="create-outline"
-                                style="color: white; font-size: 22px"
-                              ></ion-icon>
-                            </button>
-                            <button
-                              type="button"
-                              style="
-                                background-color: #343a40;
-                                border: none;
-                                padding: 6px 10px;
-                                border-radius: 4px;
-                              "
-                            >
-                              <ion-icon
-                                name="trash-outline"
-                                style="color: white; font-size: 22px"
-                              ></ion-icon>
-                            </button>
+                          <td contenteditable="true">C789</td>
+                          <td contenteditable="true">Omar</td>
+                          <td class="text-center">
+                            <input type="checkbox" class="absent-checkbox" />
                           </td>
                         </tr>
                       </tbody>
@@ -288,7 +222,6 @@
         </section>
       </div>
 
-      <!-- Control Sidebar -->
       <aside class="control-sidebar control-sidebar-dark">
         <div class="p-3">
           <h5>Title</h5>
@@ -296,25 +229,32 @@
         </div>
       </aside>
 
-      <!-- Footer -->
       <footer class="main-footer">
         <strong>&copy; 2025 MADRASATI.</strong> All rights reserved.
       </footer>
     </div>
 
-    <!-- Scripts -->
     <script src="../plugins/jquery/jquery.min.js"></script>
     <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../dist/js/adminlte.min.js"></script>
 
-    <!-- Search Filter Script -->
     <script>
-      $("#classSearchInput").on("keyup", function () {
-        var value = $(this).val().toLowerCase();
-        $("#example1 tbody tr").filter(function () {
-          var className = $(this).find("td:nth-child(2)").text().toLowerCase();
-          $(this).toggle(className.indexOf(value) > -1);
+      document.getElementById("saveGradesBtn").addEventListener("click", function () {
+        const rows = document.querySelectorAll("#example1 tbody tr");
+        const attendanceData = [];
+
+        rows.forEach((row) => {
+          const cells = row.querySelectorAll("td");
+          const checkbox = row.querySelector(".absent-checkbox");
+          attendanceData.push({
+            id: cells[0].innerText.trim(),
+            name: cells[1].innerText.trim(),
+            isAbsent: checkbox.checked,
+          });
         });
+
+        console.log("Collected Attendance Data:", attendanceData);
+        // يمكنك إرسال البيانات إلى السيرفر هنا لاحقًا باستخدام AJAX أو fetch
       });
     </script>
   </body>
