--- a/admin/create_subject.html
+++ b/admin/create_subject.html
@@ -72,7 +72,7 @@
               <img src="../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image" />
             </div>
             <div class="info">
-              <a href="#" class="d-block">Admin Name</a>
+              <a href="profile.html" class="d-block">Admin Name</a>
             </div>
           </div>
 
