--- a/yazeed/Subject2.html
+++ b/yazeed/Subject2.html
@@ -1,37 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Subject - MADRASATI</title>
-  <link rel="stylesheet" href="subject.css">
-</head>
-<body>
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <div class="user-info-row">
-      <div class="initials">SN</div>
-      <a href="profil.html" class="user_name">Student Name</a>
-    </div>
-    <hr>
-    <div class="nav">
-      <a href="dashboard_page.html" class="nav-btn">📊 Dashboard <span class="new">New</span></a>
-      <a href="grades.html" class="nav-btn">📈 Grades</a>
-      <a href="subject.html" class="nav-btn">📚 Subject</a>
-      <a href="attendance.html" class="nav-btn">📝 Attendance <span class="new">New</span></a>
-    </div>
-  </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Subject </title>
 
-  <!-- Wrapper -->
-  <div class="wrapper">
-    <!-- Topbar -->
-    <div class="topbar">
-      <a href="contect.html" class="topbar-link">Contact</a>
-      <div class="logo-area">
-        <img src="/pic/logo3.jpeg" alt="Logo" />
-        <h1>MADRASATI</h1>
+    <!-- Google Font: Source Sans Pro -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+    />
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css" />
+    <!-- Theme style -->
+    <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
+    <!-- Custom contact style -->
+    <link rel="stylesheet" href="../contact/contact_style.css" />
+    <!--profile Style-->
+    <link rel="stylesheet" href="Subject2.css" />
+  </head>
+  <body class="hold-transition sidebar-mini">
+    <div class="wrapper">
+      <!-- Preloader -->
+      <div
+        class="preloader flex-column justify-content-center align-items-center"
+      >
+        <img
+          class="animation__shake"
+          src="../loginstyls/logo3.png"
+          alt="AdminLTELogo"
+          height="60"
+          width="60"
+        />
       </div>
-    </div>
+      <!-- Navbar -->
+      <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button"
+              ><i class="fas fa-bars"></i
+            ></a>
+          </li>
+          <li class="nav-item d-none d-sm-inline-block"></li>
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link" data-toggle="dropdown" href="#">
+              <i class="far fa-bell"></i>
+              <span class="badge badge-warning navbar-badge">15</span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+              <span class="dropdown-header">15 Notifications</span>
+              <div class="dropdown-divider"></div>
+              <a href="#" class="dropdown-item">
+                <i class="fas fa-envelope mr-2"></i> new messages
+              </a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://localhost/project_madrasti/">
+              <i>Logout</i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!-- /.navbar -->
+
+      <!-- Main Sidebar Container -->
+      <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <a href="dashboard.html" class="brand-link">
+          <img
+            src="../styles/logo2.png"
+            alt="Logo"
+            class="brand-image img-circle elevation-3"
+            style="opacity: 0.8"
+          />
+          <span class="brand-text font-weight-light">Madrasati</span>
+        </a>
+
+        <div class="sidebar">
+          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+            <div class="image">
+              <img
+                src="../dist/img/user2-160x160.jpg"
+                class="img-circle elevation-2"
+                alt="User Image"
+              />
+            </div>
+            <div class="info">
+              <a href="profil.html" class="d-block">Admin Name</a>
+            </div>
+          </div>
+
+          <nav class="mt-2">
+            <ul
+              class="nav nav-pills nav-sidebar flex-column"
+              data-widget="treeview"
+              role="menu"
+              data-accordion="false"
+            >
+              <li class="nav-item">
+                <a href="dashboard_page.html" class="nav-link">
+                  <p>📊 Dashboard</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="grades.html" class="nav-link">
+                 
+                  <p>📈 Grades</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="Subject.html" class="nav-link">
+                  <p>📚 Subject</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="Attendance.html" class="nav-link">
+                  <p>📝 Attendance</p>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </aside>
+
+  
 
     <!-- Main Content -->
     <div class="main-content">
@@ -49,9 +144,20 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">
-      &copy; 2025–present <strong>MADRASATI</strong>. All rights reserved.
-    </div>
+    <footer class="main-footer">
+      <!-- Default to the left -->
+      <strong>Copyright &copy; 2025 MADRASATI.</strong> All rights reserved.
+    </footer>
+  </div>
+
+  <!-- Scripts -->
+  <script src="../plugins/jquery/jquery.min.js"></script>
+  <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../dist/js/adminlte.min.js"></script>
+  <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+  ></script>
   </div>
 </body>
 </html>
